# GetAuto

./: README.md  pyproject.toml
app/backend/: .gitignore  config.py  enums.py  pyproject.toml  start.py  urls.py
app/backend/alembic/: env.py
app/backend/alembic/versions/: a47b31fc8df4_.py
app/backend/business/: __init__.py  main.py
app/backend/business/crud/: __init__.py  users.py
app/backend/business/models/: users.py
app/backend/business/routers/: users.py
app/backend/business/schemas/: users.py
app/backend/gateway/: __init__.py  main.py  router.py  urls.py
app/backend/gateway/_auth/: __init__.py  _conf.py  enums.py
app/backend/gateway/_auth/_core/: __init__.py  _common.py  _exceptions.py
app/backend/gateway/_auth/_core/_models/: __init__.py  _common.py
app/backend/gateway/_core/: __init__.py  _conf.py  _core.py  _deps.py  _exceptions.py  _utils.py
app/backend/gateway/schemas/: business.py
app/backend/notification/: main.py
app/backend/notification/routers/: common.py
app/backend/pkg/: __init__.py  _crud.py
app/backend/pkg/_database/: __init__.py  _conn.py
app/backend/pkg/_dependencies/: __init__.py  _common.py
app/backend/pkg/_deployment/: __init__.py  config.py
app/backend/pkg/_deployment/_internal/: server.py
app/backend/pkg/_utils/: __init__.py
app/backend/pkg/http_exceptions/: exceptions.py
app/backend/pkg/logging/: __init__.py  _logging.py
docs/: AppDiagram.drawio  business_logics.md
static/: AppDiagram.drawio
