[tool.poetry]
name = "saleAuto"
version = "0.0.0.1"
description = "saleAuto app"
authors = ["Dahaka1 <ijoech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
