[tool.poetry]
name = "saleAuto"
version = "0.0.0.1"
description = "saleAuto app"
authors = ["Dahaka1 <ijoech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.103.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.20"}
pytest = "^7.4.0"
asyncpg = "^0.28.0"
aiohttp = "^3.8.5"
twilio = "^8.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
loguru = "^0.7.1"
pip = "^23.2.1"
install = "^1.3.5"
pydantic-extra-types = "^2.1.0"
phonenumbers = "^8.13.19"
alembic = "^1.12.0"
psycopg2 = "^2.9.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
